@@ -28,7 +28,7 @@ package sun.management;
 import java.lang.management.OperatingSystemMXBean;
 import java.lang.management.ManagementFactory;
 import javax.management.ObjectName;
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 
 /**
  * Implementation class for the operating system.
